# metaflow-windmill

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  ux_test_config.yaml
.github/workflows/: publish.yml  ux-tests.yml
metaflow_extensions/windmill/plugins/: mfextinit_windmill.py
metaflow_extensions/windmill/plugins/windmill/: exception.py  windmill_cli.py  windmill_compiler.py  windmill_deployer.py  windmill_deployer_objects.py
tests/: test_compiler.py
